# AutomationDesigner

./: .gitignore  README.md  autop.py  main.py  packager.py  pyproject.toml  script.txt
auto/: kinematics_solver.autop  matrix_calculator.autop  physics_solver.autop
auto/chemistry/: chemical_equation_solver.autop  chemical_node_charts.autop  limiting_reagent.autop  stoichiometry.autop
auto/physics/: physics_solver.autop
includes/: equation.py  fraction.py  gcd.py  graph.py  inputs.py  kinematics_solver.py  lcm.py  lengthcheck.py  matrix.py  matrix_calculator.py  measurement.py  parser.py  physics_solver.py  sigfig.py  sigfig2.py  title.py  typecheck.py
includes/chemistry/: chemical_equation_solver.py  chemical_node_charts.py  chemicalequation.py  chemscripting.py  compound.py  element.py  limiting_reagent.py  stoichiometry.py
includes/chemistry/thermodynamics/: hesslaw.py
includes/flm/: factor.py  flm.py
includes/physics/: physics_solver.py  physicsequations.py  physicssolver.py
includes/probability/: two_event_solver.py
includes/scripting/: logger.py  scripting.py
